--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <title>Udemy Project 3: Rotating Navigation</title>
+    <title>My Website</title>
   </head>
   <body>
     <div class="container">
@@ -21,12 +21,12 @@
         </div>
       </div>
       <div class="content">
-        <h1>Me and my family</h1>
+        <h1>About me!!</h1>
         <small>Shishir Vaddadi</small>
-        <p>My name is SHISHIR VADDADI. I have 1 brother, SRIJAN VADDADI. My mum's name is JANAKI VANDANA VADDADI. My dad's is KAMAL KANTH VADDADI</p>
+        <p>I have 1 brother, a mother and father and I am nine years old. My school name is Reach Academy Feltham in London.</p>
         <h3>ME!!!!!!!!!!</h3>
         <img src="Me.jpg" alt="ME">
-        <p>My 6 first cousins names are: SHEETAL and SRAAVIKA VADDADI, ROHIT and SANDEEP PULIGEDDA, and SIDHU and SNIGDHA MODALI</p>
+        <p>Star Sign: Don't believe in all that. I mean how could someone's whole personality be decided by what month there born in</p>
         <p><i class="fas fa-heart"></i><i class="fas fa-user-friends"></i></p>
       </div>
     </div>
