--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>I have 1 brother, a mother and father and I am nine years old. My school name is Reach Academy Feltham in London.</p>
         <h3>ME!!!!!!!!!!</h3>
         <img src="Me.jpg" alt="ME">
-        <p>Star Sign: Don't believe in all that. I mean how could someone's whole personality be decided by what month there born in</p>
+        <p>Star Sign: Don't believe in all that. I mean how could someone's whole personality be decided by what month there born in. e.g. my dad is a scorpio, but his traits are the exact opposite of that o scorpio</p>
         <p><i class="fas fa-heart"></i><i class="fas fa-user-friends"></i></p>
       </div>
     </div>
