--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     <nav>
       <ul>
-        <li><i class="fas fa-home"></i>Home</li>
-        <li><i class="fas fa-user-alt"></i>About</li>
-        <li><i class="fas fa-envelope"></i>Contact</li>
+        <li><i class="fad fa-home"></i>Home</li>
+        <li><i class="fad fa-cubes"></i>Projects</li>
+        <li><i class="fad fa-envelope"></i>Contact</li>
       </ul>
     </nav>
     <script src="sketch.js"></script>
