--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <title>My Website</title>
@@ -21,22 +21,22 @@
         </div>
       </div>
       <div class="content">
-        <h1>About me!!</h1>
+        <h1>My Projects!!</h1>
         <small>Shishir Vaddadi</small>
-        <p>I have 1 brother, a mother and father and I am nine years old. My school name is Reach Academy Feltham in London.</p>
-        <h3>ME!!!!!!!!!!</h3>
-        <img src="Me.jpg" alt="ME">
-        <p>Star Sign: Don't believe in all that. I mean how could someone's whole personality be decided by what month there born in. e.g. my dad is a scorpio, but his traits are the exact opposite of that of a scorpio. Despite this I Share 75% of the traits of a Gemini</p>
-        <p><i class="fas fa-heart"></i><i class="fas fa-user-friends"></i></p>
+        <ul>
+          <li><i class="fad fa-home"></i>Expanding Cards</li>
+          <li><i class="fad fa-cubes"></i>Progress Steps</li>
+          <li><i class="fad fa-envelope"></i>Hidden Search</li>
+        </ul>
       </div>
     </div>
     <nav>
       <ul>
         <li><i class="fad fa-home"></i>Home</li>
-        <li><a href="projects/index.html"><i class="fad fa-cubes"></i>Projects</a></li>
+        <li><i class="fad fa-cubes"></i>Projects</li>
         <li><i class="fad fa-envelope"></i>Contact</li>
       </ul>
     </nav>
-    <script src="sketch.js"></script>
+    <script src="../sketch.js"></script>
   </body>
 </html>
