adding profle page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <ul>
         <li><i class="fad fa-home"></i>Home</li>
         <li><a href="projects/index.html"><i class="fad fa-cubes"></i>Projects</a></li>
+        <li><i class="fad fa-envelope"></i>Profile</li>
         <li><i class="fad fa-envelope"></i>Contact</li>
       </ul>
     </nav>
