making some changes in menu soon more to come

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     <nav>
       <ul>
-        <li><i class="fad fa-home"></i>Home</li>
-        <li><a href="projects/index.html"><i class="fad fa-cubes"></i>Projects</a></li>
-        <li><i class="fad fa-envelope"></i>Contact</li>
+        <li class="selected-item"><i class="fad fa-home"></i>Home</li>
+        <li class="normal-item"><a href="projects/index.html"><i class="fad fa-cubes"></i>Projects</a></li>
+        <li class="normal-item"><i class="fad fa-envelope"></i>Contact</li>
       </ul>
     </nav>
     <script src="sketch.js"></script>
