--- a/projects/index.html
+++ b/projects/index.html
@@ -32,9 +32,9 @@
     </div>
     <nav>
       <ul>
-        <li><i class="fad fa-home"></i>Home</li>
-        <li><i class="fad fa-cubes"></i>Projects</li>
-        <li><i class="fad fa-envelope"></i>Contact</li>
+        <li class="normal-item"><a href="../index.html"><i class="fad fa-home"></i>Home</a></li>
+        <li class="selected-item"><i class="fad fa-cubes"></i>Projects</li>
+        <li class="normal-item"><i class="fad fa-envelope"></i>Contact</li>
       </ul>
     </nav>
     <script src="../sketch.js"></script>
