Making a LOT of changes

--- a/projects/Project10/index.html
+++ b/projects/Project10/index.html
@@ -12,6 +12,9 @@
       <div id="joke" class="joke">//Jokes here</div>
       <button id="jokeBtn" class="btn">Get Another Joke</button>
     </div>
+    <ul>
+      <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+    </ul>
     <script src="sketch.js"></script>
   </body>
 </html>
