--- a/projects/Project2/index.html
+++ b/projects/Project2/index.html
@@ -21,6 +21,9 @@
       <button class="btn" id="prev" disabled>Prev</button>
       <button class="btn" id="next">Next</button>
     <div>
+    <ul>
+      <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+    </ul>
     <script src="sketch.js"></script>
   </body>
 </html>
