--- a/projects/Project3/index.html
+++ b/projects/Project3/index.html
@@ -32,6 +32,9 @@
     </div>
     <nav>
       <ul>
+        <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+      </ul>
+      <ul>
         <li><i class="fas fa-home"></i>Home</li>
         <li><i class="fas fa-user-alt"></i>About</li>
         <li><i class="fas fa-envelope"></i>Contact</li>
