--- a/projects/Project4/index.html
+++ b/projects/Project4/index.html
@@ -14,6 +14,9 @@
         <i class="fad fa-search"></i>
       </button>
     </div>
+    <ul>
+      <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+    </ul>
     <script src="sketch.js"></script>
   </body>
 </html>
