--- a/projects/Project7/index.html
+++ b/projects/Project7/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Split Landing Page
-    </title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <title>Split Landing Page</title>
   </head>
   <body>
     <div class="container">
@@ -18,7 +18,9 @@
         <a href="#" class="btn">Buy Now</a>
       </div>
     </div>
-
+    <ul>
+      <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+    </ul>
     <script src="sketch.js"></script>
   </body>
 </html>
