--- a/projects/index.html
+++ b/projects/index.html
@@ -24,9 +24,18 @@
         <h1>My Projects!!</h1>
         <small>Shishir Vaddadi</small>
         <ul>
-          <li><i class="fad fa-home"></i>Expanding Cards</li>
-          <li><i class="fad fa-cubes"></i>Progress Steps</li>
-          <li><i class="fad fa-envelope"></i>Hidden Search</li>
+          <li class="for-projects"><a href="Project1/index.html"><i class="fad fa-home"></i>Expanding Cards</a></li>
+          <li class="for-projects"><a href="Project2/index.html"><i class="fad fa-cubes"></i>Progress Steps</a></li>
+          <li class="for-projects"><a href="Project4/index.html"><i class="fad fa-envelope"></i>Hidden Search</a></li>
+          <li class="for-projects"><a href="Project5/index.html"><i class="fad fa-envelope"></i>Blurry Loading</a></li>
+          <li class="for-projects"><a href="Project6/index.html"><i class="fad fa-envelope"></i>Scroll Animation</a></li>
+          <li class="for-projects"><a href="Project7/index.html"><i class="fad fa-envelope"></i>Split Landing Page</a></li>
+          <li class="for-projects"><a href="Project8/index.html"><i class="fad fa-envelope"></i>Form Input Wave</a></li>
+          <li class="for-projects"><a href="Project9/index.html"><i class="fad fa-envelope"></i>Sound Board</a></li>
+          <li class="for-projects"><a href="Project10/index.html"><i class="fad fa-envelope"></i>Dad Jokes</a></li>
+          <li class="for-projects"><a href="Project11/index.html"><i class="fad fa-envelope"></i>Event KeyCodes</a></li>
+          <li class="for-projects"><a href="Project12/index.html"><i class="fad fa-envelope"></i>FAQ</a></li>
+          <li class="for-projects"><a href="Project13/index.html"><i class="fad fa-envelope"></i>Random Choice Picker</a></li>
         </ul>
       </div>
     </div>
