--- a/projects/Project12/index.html
+++ b/projects/Project12/index.html
@@ -77,6 +77,9 @@
         </button>
       </div>
     </div>
+    <ul>
+      <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+    </ul>
     <script src="sketch.js"></script>
   </body>
 </html>
