--- a/projects/Project6/index.html
+++ b/projects/Project6/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Scroll Animation</title>
   </head>
   <body>
@@ -21,6 +22,9 @@
     <div class="box"><h2>Content</h2></div>
     <div class="box"><h2>Content</h2></div>
     <div class="box"><h2>Content</h2></div>
+    <ul>
+      <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+    </ul>
     <script src="sketch.js"></script>
   </body>
 </html>
