--- a/projects/Project8/index.html
+++ b/projects/Project8/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Form Input Wave</title>
   </head>
   <body>
@@ -26,7 +27,9 @@
           <input type="password" required>
           <label>Password</label>
         </div>
-
+        <ul>
+          <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+        </ul>
         <button class="btn">Login</button>
 
         <p class="text">Don't have an account? <a href="#">Register</a> </p>
