--- a/projects/Project9/index.html
+++ b/projects/Project9/index.html
@@ -15,7 +15,9 @@
     <audio id="wrong" src="sounds/wrong.mp3"></audio>
 
     <div id="buttons"></div>
-
+    <ul>
+      <li class="for-projects"><a href="../index.html"><i class="fad fa-backward"></i>Back</a></li>
+    </ul>
     <script src="sketch.js"></script>
   </body>
 </html>
