adding color and the correct

--- a/projects/index.html
+++ b/projects/index.html
@@ -24,18 +24,18 @@
         <h1>My Projects!!</h1>
         <small>Shishir Vaddadi</small>
         <ul>
-          <li class="for-projects"><a href="Project1/index.html"><i class="fad fa-home"></i>Expanding Cards</a></li>
-          <li class="for-projects"><a href="Project2/index.html"><i class="fad fa-cubes"></i>Progress Steps</a></li>
-          <li class="for-projects"><a href="Project4/index.html"><i class="fad fa-envelope"></i>Hidden Search</a></li>
-          <li class="for-projects"><a href="Project5/index.html"><i class="fad fa-envelope"></i>Blurry Loading</a></li>
-          <li class="for-projects"><a href="Project6/index.html"><i class="fad fa-envelope"></i>Scroll Animation</a></li>
-          <li class="for-projects"><a href="Project7/index.html"><i class="fad fa-envelope"></i>Split Landing Page</a></li>
-          <li class="for-projects"><a href="Project8/index.html"><i class="fad fa-envelope"></i>Form Input Wave</a></li>
-          <li class="for-projects"><a href="Project9/index.html"><i class="fad fa-envelope"></i>Sound Board</a></li>
-          <li class="for-projects"><a href="Project10/index.html"><i class="fad fa-envelope"></i>Dad Jokes</a></li>
-          <li class="for-projects"><a href="Project11/index.html"><i class="fad fa-envelope"></i>Event KeyCodes</a></li>
-          <li class="for-projects"><a href="Project12/index.html"><i class="fad fa-envelope"></i>FAQ</a></li>
-          <li class="for-projects"><a href="Project13/index.html"><i class="fad fa-envelope"></i>Random Choice Picker</a></li>
+          <li class="for-projects" style="color: aquamarine;"><a href="Project1/index.html"><i class="fad fa-globe-europe"></i>Expanding Cards</a></li>
+          <li class="for-projects" style="color: blue;"><a href="Project2/index.html"><i class="fad fa-shapes"></i>Progress Steps</a></li>
+          <li class="for-projects" style="color: dimgray;"><a href="Project4/index.html"><i class="fad fa-file-search"></i>Hidden Search</a></li>
+          <li class="for-projects" style="color: grey;"><a href="Project5/index.html"><i class="fad fa-spinner"></i>Blurry Loading</a></li>
+          <li class="for-projects" style="color: lightblue;"><a href="Project6/index.html"><i class="fad fa-arrow-alt-square-left"></i><i class="fad fa-arrow-alt-square-right"></i>Scroll Animation</a></li>
+          <li class="for-projects" style="color: forestgreen;"><a href="Project7/index.html"><i class="fad fa-adjust"></i>Split Landing Page</a></li>
+          <li class="for-projects" style="color: dodgerblue;"><a href="Project8/index.html"><i class="fad fa-sign-in"></i>Form Input Wave</a></li>
+          <li class="for-projects" style="color: darkturquoise;"><a href="Project9/index.html"><i class="fad fa-volume-up"></i>Sound Board</a></li>
+          <li class="for-projects" style="color: lightskyblue;"><a href="Project10/index.html"><i class="fad fa-smile-wink"></i>Dad Jokes</a></li>
+          <li class="for-projects" style="color: gold;"><a href="Project11/index.html"><i class="fad fa-laptop-code"></i>Event KeyCodes</a></li>
+          <li class="for-projects" style="color: lawngreen;"><a href="Project12/index.html"><i class="fad fa-comment-alt-smile"></i>FAQ</a></li>
+          <li class="for-projects" style="color: mediumorchid;"><a href="Project13/index.html"><i class="fad fa-random"></i>Random Choice Picker</a></li>
         </ul>
       </div>
     </div>
