Making some changes

--- a/projects/index.html
+++ b/projects/index.html
@@ -13,10 +13,10 @@
       <div class="circle-container">
         <div class="circle">
           <button id="close">
-            <i class="fas fa-times"></i>
+            <i class="fad fa-times"></i>
           </button>
           <button id="open">
-            <i class="fas fa-bars"></i>
+            <i class="fad fa-bars"></i>
           </button>
         </div>
       </div>
@@ -36,6 +36,7 @@
           <li class="for-projects" style="color: gold;"><a href="Project11/index.html"><i class="fad fa-laptop-code"></i>Event KeyCodes</a></li>
           <li class="for-projects" style="color: lawngreen;"><a href="Project12/index.html"><i class="fad fa-comment-alt-smile"></i>FAQ</a></li>
           <li class="for-projects" style="color: mediumorchid;"><a href="Project13/index.html"><i class="fad fa-random"></i>Random Choice Picker</a></li>
+          <li class="for-projects" style="color: deepskyblue;"><a href="Project13/index.html"><i class="fad fa-random"></i>Animated Navigation</a></li>
         </ul>
       </div>
     </div>
