--- a/Contacts/index.html
+++ b/Contacts/index.html
@@ -3,38 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <title>My Website</title>
+    <title>My Email and Contanct info</title>
   </head>
   <body>
     <div class="container">
       <div class="circle-container">
         <div class="circle">
           <button id="close">
-            <i class="fad fa-times"></i>
+            <i class="fas fa-times"></i>
           </button>
           <button id="open">
-            <i class="fad fa-bars"></i>
+            <i class="fas fa-bars"></i>
           </button>
         </div>
-      </div>
-      <div class="content">
-        <h1>About me!!</h1>
-        <small>Shishir Vaddadi</small>
-        <p>I have 1 brother, a mother and father and I am nine years old. My school name is Reach Academy Feltham in London.</p>
-        <h3>ME!!!!!!!!!!</h3>
-        <img src="Me.jpg" alt="ME">
       </div>
     </div>
     <nav>
       <ul>
-        <li class="selected-item"><i class="fad fa-home"></i>Home</li>
+        <li class="normal-item"><a href="projects/index.html"><i class="fad fa-home"></i>Home</a></li>
         <li class="normal-item"><a href="projects/index.html"><i class="fad fa-cubes"></i>Projects</a></li>
-        <li class="normal-item"><a href="Contacts/index.html"><i class="fad fa-envelope"></i>Contact</a></li>
+        <li class="selected-item"><i class="fad fa-envelope"></i>Contact</li>
       </ul>
     </nav>
-    <script src="sketch.js"></script>
+    <div class="content">
+        <p>
+            <i class="fad fa-index"></i>Email: shishir.vaddadi@gmail.com
+        </p>
+    </div>
+    
+    <script src="../sketch.js"></script>
   </body>
 </html>
