--- a/Contacts/index.html
+++ b/Contacts/index.html
@@ -24,14 +24,14 @@
     <nav>
       <ul>
         <li class="normal-item"><a href="projects/index.html"><i class="fad fa-home"></i>Home</a></li>
-        <li class="normal-item"><a href="projects/index.html"><i class="fad fa-cubes"></i>Projects</a></li>
+        <li class="normal-item"><a href="../index.html"><i class="fad fa-cubes"></i>Projects</a></li>
         <li class="selected-item"><i class="fad fa-envelope"></i>Contact</li>
       </ul>
     </nav>
     <div class="content">
-        <p>
-            <i class="fad fa-index"></i>Email: shishir.vaddadi@gmail.com
-        </p>
+        <ul>
+            <li><i></i></li>
+        </ul>
     </div>
     
     <script src="../sketch.js"></script>
