Adding 16th project

--- a/Contacts/index.html
+++ b/Contacts/index.html
@@ -30,7 +30,7 @@
     </nav>
     <div class="content">
         <ul>
-            <li><i></i></li>
+            <li>i.fad.fa-</li>
         </ul>
     </div>
     
