other replaces contact

--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -46,7 +46,7 @@
         <li><a href="#music" class="nav-link scrollto"><i class="bx bxs-music"></i> <span>Music</span></a></li>
         <li><a href="#sports" class="nav-link scrollto"><i class="bx bx-tennis-ball"></i> <span>Sports</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-book-reader"></i> <span>Academia</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Other</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
