--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -91,7 +91,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 June 2011</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3rd June 2011</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>shishir.vaddadi.uk</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+44 789 490 9172</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>London, UK</span></li>
@@ -106,6 +106,7 @@
                 </ul>
               </div>
             </div>
+            <p>
             <p>
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
