--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -56,7 +56,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shishir Vaddadi</h1>
-      <p>I enjoy <span class="typed" data-typed-items="playing batminton, solving problem with software and developing game & websites , playing piano,  geography and travelling around the world"></span></p>
+      <p>I am a <span class="typed" data-typed-items="badminton player, programmer, pianist, geographer, mathematician, traveller, reader, problem solver, coin collector, drummer, author, artist, chess player"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
