--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -56,7 +56,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shishir Vaddadi</h1>
-      <p>I am a <span class="typed" data-typed-items="badminton player, programmer, pianist, geographer, mathematician, traveller, reader, problem solver, coin collector, drummer, author, artist, chess player"></span></p>
+      <p>I am a <span class="typed" data-typed-items="badminton player, programmer, pianist, geographer, mathematician, traveller, reader, problem solver, coin collector, drummer, writer, artist, chess player"></span></p>
     </div>
   </section><!-- End Hero -->
 
