added font awsome

--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -26,7 +26,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -56,7 +56,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shishir Vaddadi</h1>
-      <p>I am a <span class="typed" data-typed-items="badminton player, programmer, pianist, geographer, mathematician, traveller, reader, problem solver, coin collector, drummer, writer, artist, chess player"></span></p>
+      
+      <p><i class="fa fa-user"></i>  I am a <span class="typed" data-typed-items="badminton player, programmer, pianist, geographer, mathematician, traveller, reader, problem solver, coin collector, drummer, writer, artist, chess player"></span></p>
     </div>
   </section><!-- End Hero -->
 
