--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -769,7 +769,7 @@
   <footer id="footer">
     <div class="container">
       <h1>Shishir Vaddadi</h1>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <i>A person like no other.</i>
     </div>
 
   </footer><!-- End Footer -->
