--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -85,18 +85,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3rd June 2011</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>shishir.vaddadi.uk</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+44 789 490 9172</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>London, UK</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: aquamarine;"></i> <strong>Birthday:</strong> <span>3rd June 2011</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: blueviolet;"></i> <strong>Website:</strong> <span>shishir.vaddadi.uk</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: fuchsia;"></i> <strong>Phone:</strong> <span>+44 789 490 9172</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: cornflowerblue;"></i> <strong>City:</strong> <span>London, UK</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>10</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Year 6 student</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>shishir.vaddadi@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>IT</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: deeppink;"></i> <strong>Age:</strong> <span>10</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: goldenrod;"></i> <strong>Education:</strong> <span>Year 6 student</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: chocolate;"></i> <strong>Email:</strong> <span>shishir.vaddadi@gmail.com</span></li>
+                  <li><i class="fad fa-chevron-right" style="color: darkcyan;"></i> <strong>Freelance:</strong> <span>IT</span></li>
                 </ul>
               </div>
             </div>
