--- a/MyResume/other/eng copy 2.html
+++ b/MyResume/other/eng copy 2.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
 </head>
 <body>
@@ -35,8 +35,12 @@
     </div>  
 
     
-
-
+      <div class="back">
+        <a href="../index.html">
+          Home
+      </a>
+      </div>
+      
 
 
 
