--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -68,8 +68,8 @@
       <div class="container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>About me</h2>
+          <p>This is me and some basic details about me. We know, not everyone is same and not everyone have same interests, if you are someone who is interested in matters of interest as me, I like to hear from you and please get in touch with me to share fun.</p>
         </div>
 
         <div class="row">
@@ -77,10 +77,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Basics about me :</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              As much as you want to know about me, I want to know about you too :) So please get in touch with me.
             </p>
             <div class="row">
               <div class="col-lg-6">
