--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -57,7 +57,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shishir Vaddadi</h1>
       
-      <p> I am a <span class="typed" data-typed-items="badminton player, programmer, pianist, geographer, mathematician, traveller, reader, problem solver, coin collector, drummer, writer, artist, chess player"></span></p>
+      <p> I am a <span class="typed" data-typed-items="Microsoft MTA, badminton player, programmer, pianist, geographer, mathematician, traveller, reader, problem solver, coin collector, drummer, writer, artist, chess player"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -69,7 +69,7 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p>This is me and some basic details about me. We know, not everyone is same and not everyone have same interests, if you are someone who is interested in matters of interest as me, I like to hear from you and please get in touch with me to share fun.</p>
+          <p>This is me and some basic details about me. We know that no two people are the same and that no two people have the same interests. If you are someone who is interested in similar matters to me, I like to hear from you and please get in touch with me to share fun.</p>
         </div>
 
         <div class="row">
@@ -101,8 +101,10 @@
             </div>
             <p>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              My favourite subject are Maths and Science.</p><p> I enjoy solving challenging questions in Maths and go beyond the National Year 6 Curriculumn (Yes, I can solve Simultaneous equations, trognimentry problems...).</p><p> I love doing science experiments and enjoyed using bunsen burners and testing chemical reactions of differnt chemicals at Hampton School as a part of Lion learning.
+</p><p> One of my biggest interests are computers. For more see Computing.
+</p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
+</p><p> My current aim is to get into one of the best secondary schools of UK to join from September 2022. Keep watching the space for updates.
             </p>
           </div>
         </div>
@@ -295,7 +297,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Computering</h2>
+          <h2>Computing</h2>
           <p>Computer Science is one of my favourite subjects. I enjoy programing and finding solutions to problems using software.</p>
         </div>
 
@@ -330,10 +332,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/m1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Microsoft</h4>
+                <p>JavaScript</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/m1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/m1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA JavaScript"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -356,24 +358,24 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/web1.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Card 2</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/web1.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/m0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Microsoft</h4>
-                <p>Web</p>
+                <p>Python</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/m0.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA Python"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -398,7 +400,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/web2.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Card 1</h4>
                 <p>Card</p>
@@ -428,10 +430,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/m2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Microsoft</h4>
+                <p>html & CSS</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/m2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/m2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA HTML & CSS"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
