--- a/index.html
+++ b/index.html
@@ -110,47 +110,42 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    <!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
         <div class="row">
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Happy Clients</p>
+              <i class="fad fa-book-spells"></i>
+              <span data-purecounter-start="0" data-purecounter-end="347" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Books Read</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <i class="fad fa-project-diagram"></i>
+              <span data-purecounter-start="0" data-purecounter-end="522" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <i class="fad fa-globe-europe"></i>
+              <span data-purecounter-start="0" data-purecounter-end="19" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Countries Visited</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+              <i class="fad fa-trophy-alt"></i>
+              <span data-purecounter-start="0" data-purecounter-end="77" data-purecounter-duration="1" class="purecounter"></span>
               <p>Awards</p>
             </div>
           </div>
@@ -158,7 +153,7 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section><!-- End Facts Section --></section>
 
     <!-- ======= Skills Section ======= -->
     <!-- ======= Resume Section ======= -->
@@ -173,7 +168,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Drawings & Paintings</h3>
-            <div class="resume-item pb-0">
+            <div class="resume-item">
               <h4>Brandon Johnson</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
@@ -182,8 +177,6 @@
                 <li>alice.barkley@example.com</li>
               </ul>
             </div>
-
-            <h3 class="resume-title">Origami</h3>
             <div class="resume-item">
               <h4>Master of Fine Arts &amp; Graphic Design</h4>
               <h5>2015 - 2016</h5>
@@ -198,7 +191,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Robotics</h3>
+            <h3 class="resume-title">Origami</h3>
             <div class="resume-item">
               <h4>Senior graphic design specialist</h4>
               <h5>2019 - Present</h5>
@@ -529,7 +522,7 @@
               <h4>Master of Fine Arts &amp; Graphic Design</h4>
               <h5>2015 - 2016</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p></p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
@@ -615,7 +608,7 @@
             </a>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-6" data-aos="zoom-in" data-aos-delay="100">
             <a href="./subjects/science.html">
             <div class="icon-box iconbox-pink">
               <div class="icon">
@@ -660,7 +653,7 @@
             </a>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <a href="./subjects/reasoning.html">
             <div class="icon-box iconbox-red">
               <div class="icon">
