--- a/index.html
+++ b/index.html
@@ -169,25 +169,25 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Drawings & Paintings</h3>
             <div class="resume-item">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>First Painting on 15.07.20</h4>
+              <img src="./assets/img/Flamingo.jpg" style="width: 80%;">
+            </div>
+            <div class="resume-item">
+              <h4>Favourite Painting on 8.10.20</h4>
+              <img src="./assets/img/Aeroplane.jpg" style="width: 80%;">
+            </div>
+            <div class="resume-item">
+              <h4>Other Paintings</h4>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+              <li><img src="./assets/img/Blend.jpg" style="width: 30%;"></li>
+              <li><img src="./assets/img/Butterfly.jpg" style="width: 30%;"></li>
+              <li><img src="./assets/img/FlowerSwirl.jpg" style="width: 30%;"></li>
+              <li><img src="./assets/img/Halloween.jpg" style="width: 30%;"></li>
+              <li><img src="./assets/img/Lavender.jpg" style="width: 30%;"></li>
+              <li><img src="./assets/img/Owls.jpg" style="width: 30%;"></li>
+              <li><img src="./assets/img/Tulip.jpg" style="width: 30%;"></li>
+              <li><img src="./assets/img/Willow.jpg" style="width: 30%;"></li>
               </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div>
           </div>
           <div class="col-lg-6">
