--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <h3 class="resume-title">Drawings & Paintings</h3>
             <div class="resume-item">
               <h4>First Painting on 15.07.20</h4>
-              <img src="./assets/img/Flamingo.jpg" style="width: 80%;">
+              <img src="./assets/img/Flamingo.jpg" style="width: 60%;">
             </div>
             <div class="resume-item">
               <h4>Favourite Painting on 8.10.20</h4>
@@ -179,29 +179,25 @@
             <div class="resume-item">
               <h4>Other Paintings</h4>
               <ul>
-              <li><img src="./assets/img/Blend.jpg" style="width: 30%;"></li>
-              <li><img src="./assets/img/Butterfly.jpg" style="width: 30%;"></li>
-              <li><img src="./assets/img/FlowerSwirl.jpg" style="width: 30%;"></li>
-              <li><img src="./assets/img/Halloween.jpg" style="width: 30%;"></li>
-              <li><img src="./assets/img/Lavender.jpg" style="width: 30%;"></li>
-              <li><img src="./assets/img/Owls.jpg" style="width: 30%;"></li>
-              <li><img src="./assets/img/Tulip.jpg" style="width: 30%;"></li>
-              <li><img src="./assets/img/Willow.jpg" style="width: 30%;"></li>
+              <img src="./assets/img/Blend.jpg" style="width: 30%;">
+              <img src="./assets/img/Butterfly.jpg" style="width: 30%;">
+              <img src="./assets/img/FlowerSwirl.jpg" style="width: 30%;">
+              <img src="./assets/img/Halloween.jpg" style="width: 30%;">
+              <img src="./assets/img/Lavender.jpg" style="width: 30%;">
+              <img src="./assets/img/Owls.jpg" style="width: 30%;">
+              <img src="./assets/img/Tulip.jpg" style="width: 30%;">
+              <img src="./assets/img/Willow.jpg" style="width: 30%;">
               </ul>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Origami</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              <h4>Before my Time to Shine</h4>
+              <h5>2014-2015</h5>
+              <p><em>Origami was a wonder in my mind so vivid.</em></p>
+              <p>At the time I was fascinated by my elder brother's awesome origami. He'd try and teach me , but to me it was magic that only he could do.</p>
+              <img src="">
             </div>
             <div class="resume-item">
               <h4>Graphic design specialist</h4>
